# c-_crossplatform_tool

MemberManagement/: CMakeLists.txt  Makefile  readme.txt
MemberManagement/include/: MemberManager.h
MemberManagement/src/: MemberManager.cpp  main.cpp
MemberManagement/test/: test_cases.cpp
